@@ -112,6 +112,16 @@
           </div>
         </div>
       </div><!-- /.row -->
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="panel panel-info text-right">
+            <div class="panel-heading">
+              <p class="announcement-heading inline-block" data-toggle="tooltip" rel="tooltip" data-original-title="{{table.recovery_percent | number:0}}">{{table.recovery_percent | number:0}}</p>
+              <p class="announcement-text">% recovery done</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <div class="row" ng-show="renderPartitions">
         <div class="col-sm-12">
