@@ -5,6 +5,9 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - displays current shard recovery status on table info page. It shows the 
+   percentage of done recovery.
+ 
  - Updated calculation of underreplicated shards/records to work with the
    change in Crate server where shards in sys.shards table have a more fine
    granular state now and relocating shards are listed, too.
